# monorepants

./: .gitignore  pants.toml
pants-plugins/tutu/: BUILD  register.py
py/libraries/libchier/: README.md  pyproject.toml  setup.cfg
py/libraries/libchier/src/libchier/: __init__.py
py/projects/cards/: BUILD  LICENSE  README.md  pyproject.toml  setup.cfg
py/projects/cards/ext-config/something/: BUILD  thing1.yaml  thing2.yaml
py/projects/cards/src/turbocorp/cards/: BUILD  entrypoint.py  game.py
py/projects/cards/src/turbocorp/cards/core/: deck.py
py/projects/cards/tests/: BUILD  conftest.py
py/projects/cards/tests/card/: test_card.py
py/projects/cards/tests/deck/: BUILD  test_deck.py
py/projects/chier/: README.md  pyproject.toml
py/projects/chier/src/chier/: __init__.py
py/projects/dice/src/turbocorp/dice/: entrypoint.py
py/projects/standalone/: pyproject.toml
py/projects/standalone/src/standalone/: __init__.py
