[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cards"
version = "0.0.1"
authors = [
  { name="Nicolas Haller", email="nicolas@boiteameuh.org" },
]
description = "A small app to play with playing cards."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cards = "turbocorp.cards.entrypoint:entrypoint"
