[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "standalone"
version = "0.0.1"
authors = [
  { name="Nicolas Haller", email="nicolas@boiteameuh.org" },
]
description = "A small standalone app"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
standalone = "standalone:entrypoint"
